<?xml version="1.0" encoding="utf-8"?>

<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Boutique</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>
    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>
    <string name="dollar">$</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Product Info</string>
    <!-- Label for Supplier information in the editor [CHAR LIMIT=30] -->
    <string name="suppliers_category">Supplier Info</string>
    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name:</string>
    <!-- Text hint for Price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">Price:</string>
    <!-- Text hint for Quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_quantity">Quantity:</string>
    <!-- Text hint for supplier Phone field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_phone"><![CDATA[ Phone # 123"-"456"-"7890]]></string>
    <string name="action_delete">Delete This Product</string>
    <string name="add_product_text">Use Plus button to add Product To Inventory</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes-->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!-- Dialog button text for the option to discard a user's changes-->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current product-->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current product -->
    <string name="delete_dialog_msg">Are you sure about deleting this product?</string>
    <!-- Dialog button text for the option to confirm deleting the current product -->
    <string name="delete">Delete</string>
    <!-- Dialog button text for the option to cancel deletion of the current product -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current product was successfully deleted -->
    <string name="editor_delete_product_successful">Product deleted</string>
    <!-- Toast message in editor when current product has failed to be deleted -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <string name="required_prod_name">Product Name is Required. No Data Was Saved</string>
    <string name="required_prod_price">Product Price is Required. No Data Was Saved</string>
    <string name="required_prod_qty">Product Quantity is Required. No Data Was Saved</string>
    <string name="required_supplier_name">Supplier Name is Required. No Data Was Saved</string>
    <string name="required_supplier_phone">Supplier Phone is Required. No Data Was Saved</string>

    <string name="sales_btn">SALES</string>
    <string name="order_btn">ORDER</string>
    <string name="delete_btn">Delete This Product</string>
    <string name="increase_btn"><![CDATA[Increase \t QTY]]></string>
    <string name="decrease_btn"><![CDATA[Reduce \t QTY]]></string>
    <string name="qty_msg_inc">Quantity Must be at least 1 or higher</string>
    <string name="qty_msg_dec">Existing Product Quantity Cannot be less than 1 </string>

    <!-- Toast message in editor when new product has been successfully inserted -->
    <string name="editor_insert_product_successful">Product saved</string>
    <!-- Toast message in editor when new product has failed to be inserted-->
    <string name="editor_insert_product_failed">Error with saving product</string>
    <!-- Toast message in editor when current product was successfully updated-->
    <string name="editor_update_product_successful">Product updated</string>
    <!-- Toast message in editor when current product has failed to be updated-->
    <string name="editor_update_product_failed">Error with updating product</string>
    <!-- db Section strings-->
    <string name="unknown_uri">Cannot query unknown URI</string>
</resources>