<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_margin"
        tools:context=".BoutiqueEditorActivity">

        <TextView
            android:id="@+id/textView"
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:text="@string/category_overview"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_product_name"
            style="@style/EditorFieldStyle"
            android:layout_width="@dimen/field_text_width"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginStart="@dimen/eight_dp"
            android:hint="@string/hint_product_name"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_product_price"
            style="@style/EditorFieldStyle"
            android:layout_width="@dimen/field_text_width"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginStart="@dimen/eight_dp"
            android:layout_marginTop="@dimen/four_dp"
            android:hint="@string/hint_product_price"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/edit_product_name" />

        <EditText
            android:id="@+id/edit_product_quantity"
            style="@style/EditorFieldStyle"
            android:layout_width="@dimen/field_text_width"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginStart="@dimen/eight_dp"
            android:hint="@string/hint_product_quantity"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/edit_product_price" />

        <TextView
            android:id="@+id/textView2"
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/text_marging_top"
            android:text="@string/suppliers_category"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/edit_supplier_name"
            style="@style/EditorFieldStyle"
            android:layout_width="@dimen/field_text_width"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginStart="@dimen/eight_dp"
            android:hint="@string/hint_product_name"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/edit_product_quantity" />

        <EditText
            android:id="@+id/edit_supplier_phone"
            style="@style/EditorFieldStyle"
            android:layout_width="@dimen/field_text_width"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginStart="@dimen/eight_dp"
            android:hint="@string/hint_supplier_phone"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/edit_supplier_name" />

        <Button
            android:id="@+id/qty_plus_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/eight_dp"
            android:layout_marginRight="@dimen/eight_dp"
            android:layout_marginTop="@dimen/thirty_two_dp"
            android:text="@string/increase_btn"
            app:layout_constraintEnd_toStartOf="@+id/qty_minus_btn"
            app:layout_constraintStart_toEndOf="@+id/order_btn"
            app:layout_constraintTop_toBottomOf="@+id/edit_supplier_phone" />

        <Button
            android:id="@+id/qty_minus_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/thirty_two_dp"
            android:text="@string/decrease_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/qty_plus_btn"
            app:layout_constraintTop_toBottomOf="@+id/edit_supplier_phone" />

        <Button
            android:id="@+id/order_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/eight_dp"
            android:layout_marginRight="@dimen/eight_dp"
            android:layout_marginTop="@dimen/thirty_two_dp"
            android:text="@string/order_btn"
            app:layout_constraintEnd_toStartOf="@+id/qty_plus_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_supplier_phone" />

        <Button
            android:id="@+id/del_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/thirty_two_dp"
            android:layout_marginRight="@dimen/thirty_two_dp"
            android:layout_marginTop="@dimen/twenty_four_dp"
            android:text="@string/delete_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/qty_plus_btn" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
