<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/eight_dp">

    <TextView
        android:id="@+id/prodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/prod_info" />

    <TextView
        android:id="@+id/prodPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight_dp"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/prodName" />

    <TextView
        android:id="@+id/prod_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:textSize="@dimen/eighteen_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Product Information" />

    <TextView
        android:id="@+id/prodQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sixteen_sp"
        android:layout_marginStart="@dimen/sixteen_sp"
        android:layout_marginTop="@dimen/eight_dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/prodPrice" />

    <Button
        android:id="@+id/sales_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/sixteen_sp"
        android:layout_marginRight="@dimen/sixteen_sp"
        android:layout_marginTop="64dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/sales_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:text="@string/hint_product_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/eighteen_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/prodName"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prod_info" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:layout_marginStart="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:text="@string/dollar"
        android:textColor="@android:color/black"
        android:textSize="@dimen/eighteen_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/prodPrice"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/prodName" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:text="@string/hint_product_price"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sixteen_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:text="@string/hint_product_quantity"
        android:textColor="@android:color/black"
        android:textSize="@dimen/eighteen_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</android.support.constraint.ConstraintLayout>